[project]
name = "unifi-mcp"
version = "0.2.0"
description = "MCP server for read-only UniFi network queries (Site Manager + Network Integration APIs), wrapping scripts/unifi.py. Works with Claude Code, OpenClaw, or any other MCP client."
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "mcp[cli]",
]

[project.scripts]
unifi-mcp = "unifi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_mcp"]

# Ship the skill script inside the wheel: installed builds (uvx from a path or
# git URL) have no repo checkout, so a repo-relative path cannot resolve it.
[tool.hatch.build.targets.wheel.force-include]
"scripts/unifi.py" = "unifi_mcp/_data/unifi.py"
